<resources>
    <string name="app_name">Whatsapp Messaging</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="phoneNumberExplanation">מספר טלפון</string>
    <string name="SendMessageExplanation">שלח הודעת whatsapp</string>
    <string name="messageText">טקסט מוכן מראש</string>
    <string name="uploadfile">הוסף קובץ</string>
    <string name="RemoveFile">הסר קובץ</string>
    <string name="customerNameMessageText">שם הלקוח</string>
    <string name="PatterUsage">שימוש בתבנית הודעה (לטקסט הכתוב בתיבה למעלה לא תהיה השפעה)</string>
    <string name="JobDescriptionText">תיאור העבודה</string>
    <string name="JobPriceText">מחיר</string>
</resources>
